# hello-world-in-90-languages

./: README.md
go/: README.md  main.go
jvm-clojure-ring/: README.md  project.clj
jvm-clojure-ring/src/jvm_clojure_ring/: handler.clj
jvm-clojure-ring/test/jvm_clojure_ring/: handler_test.clj
jvm-java-ratpack/src/main/java/jvm/java/ratpack/: Main.java
jvm-java-ratpack/src/test/java/jvm/java/ratpack/: MainTest.java
jvm-kotlin-ktor/: build.gradle
jvm-kotlin-ktor/src/: Application.kt
jvm-kotlin-micronaut/: Dockerfile  build.gradle  micronaut-cli.yml
jvm-kotlin-micronaut/src/main/kotlin/jvm/kotlin/micronaut/: Application.kt  Response.kt  SayHelloController.kt
jvm-kotlin-micronaut/src/main/resources/: application.yml
nodejs-express/: README.md  index.js  package-lock.json  package.json
pony/: .gitignore  README.md  bundle.json  hello-world.pony
posix-c/: README.md  server.c
python/: README.md  sayhello.py
rust-only-stdlib/: Cargo.toml  README.md
rust-only-stdlib/src/: main.rs
rust-rocket/: Cargo.toml  README.md
rust-rocket/src/: main.rs
